--- a/app/src/main/res/layout/activity_post_question.xml
+++ b/app/src/main/res/layout/activity_post_question.xml
@@ -63,6 +63,7 @@
             android:fontFamily="@font/montserrat"
             android:text=""
             android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
