--- a/app/src/main/res/layout/activity_log_in_sign_up.xml
+++ b/app/src/main/res/layout/activity_log_in_sign_up.xml
@@ -74,10 +74,11 @@
             android:id="@+id/ButtonLogIn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
             android:onClick="onLoginClick"
             android:backgroundTint="@color/colorPrimary"
             app:cardCornerRadius="10dp"
@@ -96,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:text="Log In"
+                android:text="Log In Using Google Account"
                 android:textColor="@color/colorAccent"
                 android:textSize="21sp"
                 app:layout_constraintBottom_toBottomOf="parent"
