--- a/app/src/main/res/layout/activity_expert_search_result.xml
+++ b/app/src/main/res/layout/activity_expert_search_result.xml
@@ -6,15 +6,33 @@ android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".ExpertSearchResultActivity">
-<TextView
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/cardview_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
-    android:textSize="25sp"
-    android:textStyle="italic"
-    android:text="Search Results."/>
+    android:layout_centerInParent="true"
+    android:layout_gravity="center_horizontal"
 
-<androidx.recyclerview.widget.RecyclerView
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:text="Search Result"
+    android:textSize="30sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recycleView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
