--- a/app/src/main/res/layout/activity_expert_profile.xml
+++ b/app/src/main/res/layout/activity_expert_profile.xml
@@ -113,6 +113,12 @@
                 android:padding="10dp"
                 android:text="Subjects"/>
 
+            <Button
+                android:id="@+id/chatWithExpertBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="chat now"/>
+
         </LinearLayout>
         <View
             android:layout_width="match_parent"
