--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,8 +49,8 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/ButtonLogIn"
             android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="32dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="42dp"
             android:layout_marginEnd="24dp"
             android:backgroundTint="@color/colorPrimary"
             android:clickable="true"
@@ -77,8 +77,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.45" />
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
